--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = A Python package for interacting with the GitHub API.
 long_description = file: README.md
 keywords = github, api, package
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
